Fixed margin left on mobile view
git-svn-id: https://plugins.svn.wordpress.org/treedbox-admin-menu/trunk@1142428 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/treedbox_admin_menu.css
+++ b/treedbox_admin_menu.css
@@ -38,3 +38,8 @@ background-color: rgba(255,255,255,.2);
 #wpbody{
 	position:  inherit;
 }
+@media only screen and (max-width: 600px) {
+	.folded #wpcontent, .folded #wpfooter{
+		margin-left: 0px;
+	}
+}
